--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">MVVM</string>
     <string name="no_internet">No Internet Connection</string>
     <string name="invalid_email_password">Invalid email or password</string>
-
+    <string name="name_required">Name is required</string>
+    <string name="email_required">Email is required</string>
+    <string name="enter_password">Please enter a password</string>
+    <string name="password_not_match">Password did not match</string>
 
 
 </resources>
